--- a/tictactoe.html
+++ b/tictactoe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link  rel="stylesheet" href="/Css/tictactoe.css">
+    <link  rel="stylesheet" href="/tictactoe.css">
 
 </head>
 <body>
@@ -36,7 +36,7 @@
     </button>
 </div>
 
-<script src="/js/tictactoe.js"></script>
+<script src="/tictactoe.js"></script>
 
 </body>
 </html>
